// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deleteItemFromDays deletes an existing item and returns new arrays 1`] = `
[
  [
    "2018-01-01",
    [
      {
        "uniqueId": 1,
      },
      {
        "uniqueId": 2,
      },
    ],
  ],
  [
    "2018-01-02",
    [
      {
        "uniqueId": 4,
      },
    ],
  ],
]
`;

exports[`deleteItemFromDays deletes the day if it is empty 1`] = `
[
  [
    "2018-01-01",
    [
      {
        "uniqueId": 1,
      },
      {
        "uniqueId": 2,
      },
    ],
  ],
  [
    "2018-01-02",
    [
      {
        "uniqueId": 4,
      },
    ],
  ],
]
`;

exports[`deleteItemFromDays returns days if item does not exist 1`] = `
[
  [
    "2018-01-01",
    [
      {
        "uniqueId": 1,
      },
      {
        "uniqueId": 2,
      },
    ],
  ],
  [
    "2018-01-02",
    [
      {
        "uniqueId": 3,
      },
      {
        "uniqueId": 4,
      },
    ],
  ],
]
`;
